--- a/mccarter-portfolio/public/index.html
+++ b/mccarter-portfolio/public/index.html
@@ -10,6 +10,7 @@
       content="Web site created using create-react-app"
     />
     <title>McCarter Portfolio</title>
+    <script src="https://kit.fontawesome.com/f44abfeecf.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="root"></div>
